src/objects/ints__Credit_Score_Factor__c.object
<CustomObject>
    <fields>
        <fullName>ints__Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__CreditReportScore__c</fullName>
        <label>Credit Report Score</label>
        <referenceTo>ints__Credit_Report_Score__c</referenceTo>
        <relationshipLabel>CreditScoreFactor</relationshipLabel>
        <relationshipName>CreditScoreFactor</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__Text__c</fullName>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Credit Score Factor</label>
    <nameField>
        <displayFormat>CSF-{0000000000}</displayFormat>
        <label>Credit Score Factor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Score Factors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>